--- a/_config.yml
+++ b/_config.yml
@@ -4,18 +4,18 @@
 permalink:           pretty
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:               Sejinleecodes
+tagline:             'blog'
+description:         'A place where I'm going to post about my honest thoughts, random ideas, unforgettable memories and experiences'
 url:                 http://lanyon.getpoole.com
 baseurl:             '/sejinleecodes'
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Se Jin Lee
+  url:               https://www.facebook.com/sejin.lee.7370
+  email:             sjleesogang@gmail.com
 
 # Custom vars
 version:             1.0.0
