--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 
 # Setup
-title:               Sejinleecodes
+title:               Sejinlee
 tagline:             'blog'
 description:         'A place where I'm going to post about my honest thoughts, random ideas, unforgettable memories and experiences'
 url:                 http://lanyon.getpoole.com
