--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 
-
+permalinks :         pretty
 # Setup
 title:               Sejinlee
 tagline:             'blog'
