--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,22 @@
+
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
-
 permalink:           pretty
+
 # Setup
 title:               Lanyon
-tagline:             'blog'
-description:         'A place where I'm going to post about my honest thoughts, random ideas, unforgettable memories and experiences'
+tagline:             'A Jekyll theme'
+description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 http://lanyon.getpoole.com
 baseurl:             '/sejinleecodes'
 paginate:            5
 
 # About/contact
 author:
-  name:              Se Jin Lee
-  url:               https://www.facebook.com/sejin.lee.7370
-  email:             sjleesogang@gmail.com
+  name:              Mark Otto
+  url:               https://twitter.com/mdo
+  email:             markdotto@gmail.com
 
 # Custom vars
 version:             1.0.0
