--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ paginate:            5
 # About/contact
 author:
   name:              Se Jin Lee
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  url:               https://www.facebook.com/sejin.lee.7370
+  email:             sjleesogang@gmail.com
 
 # Custom vars
 version:             1.0.0
